--- a/src/Services/Identity/Identity.API/appsettings.Docker.json
+++ b/src/Services/Identity/Identity.API/appsettings.Docker.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
-    "PostgresConnection": "Server=127.0.0.1; Port=5433; User Id=postgres; Password=password; Database=identity"
-  },
-  "AllowedHosts": "*"
+    "postgresConnection": "Server=postgres; Port=5432; User Id=username; Password=password; Database=identity"
+  }
 }
