--- a/src/Services/Identity/Identity.Domain/Identity.Domain.csproj
+++ b/src/Services/Identity/Identity.Domain/Identity.Domain.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
