--- a/src/Services/Identity/Identity.API/appsettings.Development.json
+++ b/src/Services/Identity/Identity.API/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "IdentityServer": {
+    "TokenUri": "https://localhost:1000/connect/token",
+    "IssuerUri":  "https://localhost:1000"
   }
 }
