--- a/src/Services/Identity/Identity.API/appsettings.Docker.json
+++ b/src/Services/Identity/Identity.API/appsettings.Docker.json
@@ -1,11 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "IdentityServer": {
+    "TokenUri": "http://localhost:1000/connect/token",
+    "IssuerUri": "http://identity:80"
   },
-
   "ConnectionStrings": {
     "postgresConnection": "Server=postgres; Port=5432; User Id=username; Password=password; Database=identity"
   }
