--- a/src/Services/Musicians/Musicians.Infrastructure/Musicians.Infrastructure.csproj
+++ b/src/Services/Musicians/Musicians.Infrastructure/Musicians.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
+    <ProjectReference Include="..\Musicians.Application\Musicians.Application.csproj" />
   </ItemGroup>
 
 </Project>
