Configure appsettings files both for development and docker envs

--- a/src/Services/Musicians/Musicians.API/appsettings.Docker.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Docker.json
@@ -1,9 +1,13 @@
 {
-  "MongoDB": {
+  "MongoDbSettings": {
     "Database": "musiciansDB",
     "Host": "mongo",
     "Port": "27017",
     "User": "root",
     "Password": "password"
+  },
+  "IdentityServer": {
+    "TokenUri": "http://localhost:1000/connect/token",
+    "IssuerUri": "http://identity:80"
   }
 }
