--- a/src/Services/Musicians/Musicians.API/appsettings.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.json
@@ -1,9 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ServiceName": "Musicians",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CollectionsNamesOptions": {
+    "MusiciansCollectionName": "Musicians",
+    "GenresCollectionName": "Genres",
+    "SkillsCollectionName": "Skills"
+  }
 }
