--- a/src/Services/Musicians/Musicians.API/appsettings.Development.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Development.json
@@ -1,15 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "IdentityServer": {
+    "TokenUri": "https://localhost:1000/connect/token",
+    "IssuerUri": "https://localhost:1000"
   },
-  "MongoDB": {
+  "MongoDbSettings": {
     "Database": "musiciansDB",
     "Host": "localhost",
     "Port": "27017",
-    "User": "root",
-    "Password": "password"
   }
 }
