Remove collections name and start to retrieve them by accessing type using reflection

--- a/src/Services/Musicians/Musicians.API/appsettings.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.json
@@ -20,10 +20,5 @@
       }
     ]
   },
-  "AllowedHosts": "*",
-  "CollectionsNamesOptions": {
-    "MusiciansCollectionName": "Musicians",
-    "GenresCollectionName": "Genres",
-    "SkillsCollectionName": "Skills"
-  }
+  "AllowedHosts": "*"
 }
