--- a/src/Services/Musicians/Musicians.Infrastructure/Musicians.Infrastructure.csproj
+++ b/src/Services/Musicians/Musicians.Infrastructure/Musicians.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Musicians.Application\Musicians.Application.csproj" />
   </ItemGroup>
 
