Customize application settings and launch settings

--- a/src/Services/Chat/Chat.API/appsettings.Development.json
+++ b/src/Services/Chat/Chat.API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "IdentityServer": {
+    "TokenUri": "https://localhost:1000/connect/token",
+    "IssuerUri": "https://localhost:1000"
+  },
+  "ConnectionStrings": {
+    "sqlConnection": "server=.; database=ChatDB; Encrypt=false; Integrated Security=true"
   }
 }
