--- a/src/Services/Chat/Chat.API/appsettings.Docker.json
+++ b/src/Services/Chat/Chat.API/appsettings.Docker.json
@@ -1,11 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
-    "sqlConnection": "server=sqlserver; database=ChatDB; User Id=SA; Password=passw0rd; Trust Server Certificate=True"
+    "sqlConnection": "server=sqlserver; database=ChatDB; User Id=SA; Password=Passw0rd1234; Trust Server Certificate=True"
+  },
+  "IdentityServer": {
+    "TokenUri": "http://localhost:1000/connect/token",
+    "IssuerUri": "http://identity:80"
   }
 }
