--- a/src/Services/Chat/Chat.API/appsettings.json
+++ b/src/Services/Chat/Chat.API/appsettings.json
@@ -1,12 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ServiceName": "Chat",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ]
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "sqlConnection": "server=.; database=ChatDB; Encrypt=false; Integrated Security=true"
+  "AllowedHosts": "*"
+  "ChatRolesOptions": {
+    "Admin": "Admin",
+    "AdminRolePrecedence": 2,
+    "Creator": "Creator",
+    "CreatorRolePrecedence": 3,
+    "User": "User",
+    "UserRolePrecedence": 1
   }
 }
