Add kafka producer options

--- a/src/Services/Identity/Identity.API/appsettings.Development.json
+++ b/src/Services/Identity/Identity.API/appsettings.Development.json
@@ -1,6 +1,11 @@
 {
+  "ProducerConfig": {
+    "BootstrapServers": "localhost:9092",
+    "ClientId": "IdentityServer",
+    "Topic": "Identity"
+  },
   "IdentityServer": {
     "TokenUri": "https://localhost:1000/connect/token",
-    "IssuerUri":  "https://localhost:1000"
+    "IssuerUri": "https://localhost:1000"
   }
 }
