--- a/src/Services/Identity/Identity.API/appsettings.Docker.json
+++ b/src/Services/Identity/Identity.API/appsettings.Docker.json
@@ -3,6 +3,11 @@
     "TokenUri": "http://localhost:1000/connect/token",
     "IssuerUri": "http://identity:80"
   },
+  "ProducerConfig": {
+    "BootstrapServers": "kafka:9092",
+    "ClientId": "IdentityServer",
+    "Topic": "Identity"
+  },
   "ConnectionStrings": {
     "postgresConnection": "Server=postgres; Port=5432; User Id=username; Password=password; Database=identity"
   }
