--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ServiceName":  "Identity",
+  "ServiceName": "Identity",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -19,6 +19,9 @@
         }
       }
     ]
+  },
+  "KafkaTopicOptions": {
+    "IdentityTopic": "Identity"
   },
   "ConnectionStrings": {
     "PostgresConnection": "Server=127.0.0.1; Port=5433; User Id=postgres; Password=password; Database=identity"
