Add kafka configurations

--- a/src/Services/Musicians/Musicians.API/appsettings.Development.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Development.json
@@ -7,5 +7,13 @@
     "Database": "musiciansDB",
     "Host": "localhost",
     "Port": "27017",
+  },
+  "ConsumerConfig": {
+    "BootstrapServers": "localhost:9092",
+    "ClientId": "Musicians",
+    "GroupId": "MusicianIdentityConsumer",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": "true",
+    "EnableAutoOffsetStore":  "false"
   }
 }
