--- a/src/Services/Musicians/Musicians.API/appsettings.Docker.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Docker.json
@@ -9,5 +9,13 @@
   "IdentityServer": {
     "TokenUri": "http://localhost:1000/connect/token",
     "IssuerUri": "http://identity:80"
+  },
+  "ConsumerConfig": {
+    "BootstrapServers": "kafka:9092",
+    "ClientId": "Musicians",
+    "GroupId": "MusicianIdentityConsumer",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": "true",
+    "EnableAutoOffsetStore": "false"
   }
 }
