--- a/src/Services/Musicians/Musicians.API/appsettings.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.json
@@ -20,5 +20,9 @@
       }
     ]
   },
+  "KafkaTopicOptions": {
+    "IdentityTopic": "Identity",
+    "MusiciansTopic": "Musicians"
+  },
   "AllowedHosts": "*"
 }
