Add kafka configurations

--- a/src/Services/Chat/Chat.API/appsettings.Development.json
+++ b/src/Services/Chat/Chat.API/appsettings.Development.json
@@ -5,5 +5,13 @@
   },
   "ConnectionStrings": {
     "sqlConnection": "server=.; database=ChatDB; Encrypt=false; Integrated Security=true"
+  },
+  "ConsumerConfig": {
+    "BootstrapServers": "localhost:9092",
+    "ClientId": "Chat",
+    "GroupId": "ChatIdentityConsumer",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": "true",
+    "EnableAutoOffsetStore": "false"
   }
 }
