--- a/src/Services/Chat/Chat.API/appsettings.json
+++ b/src/Services/Chat/Chat.API/appsettings.json
@@ -20,7 +20,11 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KafkaTopicOptions": {
+    "IdentityTopic": "Identity",
+    "MusiciansTopic": "Musicians"
+  },
   "ChatRolesOptions": {
     "Admin": "Admin",
     "AdminRolePrecedence": 2,
