--- a/src/Services/Chat/Chat.API/appsettings.Docker.json
+++ b/src/Services/Chat/Chat.API/appsettings.Docker.json
@@ -5,5 +5,13 @@
   "IdentityServer": {
     "TokenUri": "http://localhost:1000/connect/token",
     "IssuerUri": "http://identity:80"
+  },
+  "ConsumerConfig": {
+    "BootstrapServers": "kafka:9092",
+    "ClientId": "Chat",
+    "GroupId": "ChatIdentityConsumer",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": "true",
+    "EnableAutoOffsetStore": "false"
   }
 }
