--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -24,6 +24,7 @@ services:
             context: "."
             dockerfile: "/Services/Identity/Identity.API/Dockerfile"
         depends_on:
+            - kafka
             - postgres
 
     chat:
@@ -32,6 +33,7 @@ services:
             context: "."
             dockerfile: "/Services/Chat/Chat.API/Dockerfile"
         depends_on:
+            - kafka
             - sqlserver
 
     musicians:
@@ -40,4 +42,21 @@ services:
             context: "."
             dockerfile: "/Services/Musicians/Musicians.API/Dockerfile"
         depends_on:
+            - kafka
             - mongo
+
+    zookeeper:
+        image: confluentinc/cp-zookeeper:latest
+        container_name: zookeeper
+
+    kafka:
+        image: confluentinc/cp-kafka:latest
+        container_name: kafka
+        depends_on:
+            - zookeeper
+
+    kafdrop:
+        image: obsidiandynamics/kafdrop:latest
+        container_name: kafdrop
+        depends_on:
+            - kafka
