Add service grpc configuration

--- a/src/Services/Musicians/Musicians.API/appsettings.Docker.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Docker.json
@@ -17,5 +17,17 @@
     "AutoOffsetReset": "Earliest",
     "EnableAutoCommit": "true",
     "EnableAutoOffsetStore": "false"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "grpc": {
+        "Url": "http://musicians:2001",
+        "Protocols": "Http2"
+      },
+      "webApi": {
+        "Url": "http://musicians",
+        "Protocols": "Http1"
+      }
+    }
   }
 }
