--- a/src/Services/Musicians/Musicians.Application/Musicians.Application.csproj
+++ b/src/Services/Musicians/Musicians.Application/Musicians.Application.csproj
@@ -9,6 +9,12 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.24.3" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.57.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.58.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="MediatR" Version="12.1.1" />
@@ -19,4 +25,7 @@
     <ProjectReference Include="..\Musicians.Domain\Musicians.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="Grpc\v1\Protos\musician.proto" GrpcServices="Server" />
+  </ItemGroup>
 </Project>
