Add grpc client configuration

--- a/src/Services/Chat/Chat.API/appsettings.Docker.json
+++ b/src/Services/Chat/Chat.API/appsettings.Docker.json
@@ -13,5 +13,8 @@
     "AutoOffsetReset": "Earliest",
     "EnableAutoCommit": "true",
     "EnableAutoOffsetStore": "false"
+  },
+  "GrpcConfigOptions": {
+    "MusicianUrl": "http://musicians:2001"
   }
 }
