--- a/src/Services/Chat/Chat.API/appsettings.Development.json
+++ b/src/Services/Chat/Chat.API/appsettings.Development.json
@@ -13,5 +13,8 @@
     "AutoOffsetReset": "Earliest",
     "EnableAutoCommit": "true",
     "EnableAutoOffsetStore": "false"
+  },
+  "GrpcConfigOptions": {
+    "MusicianUrl": "https://localhost:2000"
   }
 }
