Add and configure hangfire

--- a/src/Services/Chat/Chat.API/appsettings.json
+++ b/src/Services/Chat/Chat.API/appsettings.json
@@ -32,5 +32,11 @@
     "CreatorRolePrecedence": 3,
     "User": "User",
     "UserRolePrecedence": 1
+  },
+  "HangfireOptions": {
+    "DeleteChatRoomsOptions": {
+      "Schedule": "56 8 * * *",
+      "JobId": "ChaRoomDeleting"
+    }
   }
 }
