Add redis configuration to chat service

--- a/src/Services/Chat/Chat.API/appsettings.Development.json
+++ b/src/Services/Chat/Chat.API/appsettings.Development.json
@@ -4,7 +4,8 @@
     "IssuerUri": "https://localhost:1000"
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=.; database=ChatDB; Encrypt=false; Integrated Security=true"
+    "sqlConnection": "server=.; database=ChatDB; Encrypt=false; Integrated Security=true",
+    "redis": "localhost:6379"
   },
   "ConsumerConfig": {
     "BootstrapServers": "localhost:9092",
