--- a/src/Services/Chat/Chat.API/appsettings.Docker.json
+++ b/src/Services/Chat/Chat.API/appsettings.Docker.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "sqlConnection": "server=sqlserver; database=ChatDB; User Id=SA; Password=Passw0rd1234; Trust Server Certificate=True"
+    "sqlConnection": "server=sqlserver; database=ChatDB; User Id=SA; Password=Passw0rd1234; Trust Server Certificate=True",
+    "redis": "redis"
   },
   "IdentityServer": {
     "TokenUri": "http://localhost:1000/connect/token",
