--- a/src/Services/Chat/Chat.BusinessLogic/Chat.BusinessLogic.csproj
+++ b/src/Services/Chat/Chat.BusinessLogic/Chat.BusinessLogic.csproj
@@ -24,8 +24,10 @@
     <PackageReference Include="Hangfire" Version="1.8.5" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
 
   <ItemGroup>
