--- a/src/Services/Chat/Chat.API/appsettings.json
+++ b/src/Services/Chat/Chat.API/appsettings.json
@@ -38,5 +38,15 @@
       "Schedule": "56 8 * * *",
       "JobId": "ChaRoomDeleting"
     }
+  },
+  "RedisOptions": {
+    "ChatRolesCacheOptions": {
+      "AbsoluteExpirationMinutes": 5,
+      "SlidingExpirationMinutes": 2
+    },
+    "MessengerUserProfileCacheOptions": {
+      "AbsoluteExpirationMinutes": 2,
+      "SlidingExpirationMinutes": 1
+    }
   }
 }
