Add redis configuration to musician service

--- a/src/Services/Musicians/Musicians.API/appsettings.Development.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Development.json
@@ -8,6 +8,9 @@
     "Host": "localhost",
     "Port": "27017",
   },
+  "ConnectionStrings": {
+    "redis": "localhost:6379"
+  },
   "ConsumerConfig": {
     "BootstrapServers": "localhost:9092",
     "ClientId": "Musicians",
