--- a/src/Services/Musicians/Musicians.API/appsettings.Docker.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.Docker.json
@@ -18,6 +18,9 @@
     "EnableAutoCommit": "true",
     "EnableAutoOffsetStore": "false"
   },
+  "ConnectionStrings": {
+    "redis": "redis"
+  },
   "Kestrel": {
     "Endpoints": {
       "grpc": {
