--- a/src/Services/Musicians/Musicians.API/appsettings.json
+++ b/src/Services/Musicians/Musicians.API/appsettings.json
@@ -24,5 +24,11 @@
     "IdentityTopic": "Identity",
     "MusiciansTopic": "Musicians"
   },
+  "RedisOptions": {
+    "MusicianCacheOptions": {
+      "AbsoluteExpirationMinutes": 5,
+      "SlidingExpirationMinutes": 2
+    }
+  },
   "AllowedHosts": "*"
 }
