Add redis to docker

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -60,3 +60,7 @@ services:
         container_name: kafdrop
         depends_on:
             - kafka
+    
+    redis:
+        image: redis:latest
+        container_name: Redis
