--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,6 +1,11 @@
 version: '3.8'
 
 services:
+    redis:
+        ports:
+            - 6379:6379
+        restart: unless-stopped 
+
     sqlserver: 
         ports:
           - 1433:1433
@@ -54,3 +59,29 @@ services:
         environment:
             - ASPNETCORE_ENVIRONMENT=Docker
         restart: unless-stopped
+   
+    zookeeper:
+        ports:
+            - "2181:2181" 
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+
+    kafka:
+        ports:
+            - "9092:9092"
+        environment:
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+            KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_LOG_CLEANER_DELETE_RETENTION_MS: 5000
+            KAFKA_BROKER_ID: 1
+            KAFKA_MIN_INSYNC_REPLICAS: 1
+
+    kafdrop:
+        ports:
+            - 9000:9000
+        environment:
+            KAFKA_BROKERCONNECT: kafka:9092
