--- a/src/Services/Chat/Chat.API/appsettings.json
+++ b/src/Services/Chat/Chat.API/appsettings.json
@@ -38,5 +38,8 @@
       "Schedule": "56 8 * * *",
       "JobId": "ChaRoomDeleting"
     }
+  },
+  "SignalRConfigOptions": {
+    "ChatHubName": "chatHub"
   }
 }
